--- a/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
+++ b/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
@@ -284,7 +284,7 @@
                       str2 +="</div>";
                       str2 += "<div class='aPrice'>Prix : "+data['price']+"€</div>";
                       str2 += "<div class='aDate'>Mise en ligne : "+data['date']+"</div>";
-                      str2 += "<div class='aMail'><a href=''><i class='fa fa-envelope-o' style='margin-right:10px;'> </i>Envoyer un mail</a></div>";
+                      str2 += "<div class='aMail' style='margin-left: 5px;'><a href=''><i class='fa fa-envelope-o' style='margin-right:10px;'> </i>Envoyer un mail</a></div>";
                     str2 +="</div>"; 
                     str2 += "<h3 class='title'>"+data['title']+"</h3>";
                     str2 += "<div class='desc'>"+data['description']+"</div>";
