--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -14,7 +14,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Nos offres</a></li>
+        <li><a href="#pricing">Nos offres</a></li>
         <li><a href="#">Le produit</a></li>
         {% if app.user  == null %}
         <li><a href="#" data-toggle="modal" data-target="#myModal">Connexion</a></li>
