--- a/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
@@ -11,6 +11,7 @@
         <link href="{{asset('css/font-awesome.min.css')}}" rel="stylesheet" type="text/css">
         <script src="{{asset('js/jquery-1.11.3.min.js')}}"></script>
         <script src="{{asset('js/wow.min.js')}}"></script>
+        <script src="{{asset('js/scroll.js')}}"></script>
     </head>
     <body>
         {% include "::navbar.html.twig" %}
@@ -23,14 +24,13 @@
             <div id="mini-game" class="row-centered">
                 <div class="col-md-8" style="float:none;margin:auto;">
                     <span class="minigame-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-                        Regroupez toutes vos applications et gérez les en un clic !
+                        Grâce à LaBonneApi, optimisez vos recherches et vos annonces leboncoin.fr !
                     </span>
                     <div class="minigame-text wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
-                        <p>ApiProject permet de rassemblez toutes vos applications au sein d'un seul et unique service !</p> 
-                        <p>De cette façon, vous êtes toujours <strong>connectés</strong> à vos amis !</p> 
-                        <p>Ne perdez plus de <strong>temps</strong> à jongler entre toutes vos apps.</p> 
-                        <p>Découvrez comment chatter en <strong>un seul</strong> clic!</p> 
-                        <p><strong>Snapchat, Whatsapp, et bien plus encore</strong> : centralisez vos apps gratuitement!</p>
+                        <p><strong>LaBonneApi</strong> vous permet de gérer vos recherches et vos annonces au sein d'un seul et unique service !</p> 
+                        <p>Obtenez des milliers d'annonces en <strong>une seule requête</strong> !</p> 
+                        <p>Ne perdez plus de <strong>temps</strong> à parcourir toutes les pages.</p> 
+                        <p>Déposez et validez une annonce en une seule étape !</p> 
                     </div>
                 </div>
             </div>
@@ -40,30 +40,30 @@
                 <div class="features">
                     <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-arrows"></i>
-                            <h2>Drag&Drop</h2>
-                            <h3>Une interface simple et intuitive pour créer vos sondages</h3>
+                            <i class="fa fa-cube"></i>
+                            <h2>Récupérez les annonces</h2>
+                            <h3>Récupérez les annonces suivants des critères géographiques, catégorie, prix, etc.</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-pie-chart"></i>
                             <h2>Statistiques</h2>
-                            <h3>Obtenez des statistiques ultra détaillées sur vos utilisateurs</h3>
+                            <h3>Obtenez des statistiques sur vos appels et votre consommation</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-rocket"></i>
-                            <h2>Visibilité</h2>
-                            <h3>Grâce aux QRcodes, vous pouvez atteindre des milliers d'utilisateurs</h3>
+                            <i class="fa fa-plus"></i>
+                            <h2>Dépôts d'annonce</h2>
+                            <h3>LaBonneApi vous permet de créer une annonce en une seule requête!</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-gamepad"></i>
-                            <h2>Mini-jeu</h2>
-                            <h3>Créez des minis-jeux afin de rendre vos sondages ludiques et amusants</h3>
+                            <i class="fa fa-envelope-o"></i>
+                            <h2>E-mail</h2>
+                            <h3>Envoyez des mails sur n'importe quelle annonce en un instant</h3>
                         </div>
                     </div>
                 </div>
@@ -74,27 +74,30 @@
                 <div class="pricing-item col-md-3 col-md-offset-1">
                     <h3>Basique</h3>
                     <ul>
-                        <li>osef1</li>
-                        <li>osef2</li>
+                        <li>50 appels</li>
+                        <li>-----</li>
                     </ul>
-                    <button>Acheter</button>
                 </div>
                 <div class="pricing-item col-md-3 col-md-offset-1">
                     <h3>pro</h3>
                     <ul>
-                        <li>osef1</li>
-                        <li>osef2</li>
+                        <li>200 appels</li>
+                        <li>Showcase</li>
                     </ul>
-                    <button>Acheter</button>
                 </div>
                 <div class="pricing-item col-md-3 col-md-offset-1">
                     <h3>premium</h3>
                     <ul>
-                        <li>osef1</li>
-                        <li>osef2</li>
+                        <li>500 appels</li>
+                        <li>Showcase</li>
                     </ul>
-                    <button>Acheter</button>
                 </div>
+            </div>
+        </div>
+        <div id="showcase" class="col-md-12" style="padding:0px;">
+            <div id="dashboard">
+                <span style="font-family: 'coolvetica';">Statistiques détaillées de votre consommation</span><br/>
+                <span style="font-size: 20px;">Nombres d'appels totaux, par jour, par catégorie, par région, etc.</span>
             </div>
         </div>
         <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -145,5 +148,10 @@
     <script src="{{asset('js/bootstrap.min.js')}}"></script>
     <script>
      new WOW().init();
+
+     
+   $(function() {
+    $('html').smoothScroll(500);
+   });
     </script>
 </html>
