--- a/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div id="showcase" class="col-md-12" style="padding:0px;">
-            <div id="dashboard">
+            <div id="dash">
                 <span style="font-family: 'coolvetica';">Statistiques détaillées de votre consommation</span><br/>
                 <span style="font-size: 20px;">Nombres d'appels totaux, par jour, par catégorie, par région, etc.</span>
             </div>
