--- a/web/css/homepage.css
+++ b/web/css/homepage.css
@@ -213,7 +213,7 @@
   background: bottom no-repeat fixed url('../img/dashboard.jpg');
 }
 
-#dashboard
+#dash
 {
   height: 100%;
   background-color: rgba(0,0,0,0.8);
